<resources>
    <string name="app_name">AtTheShop</string>
    <string name="textview">TextView</string>
    <string name="enter_password">Enter Password</string>
    <string name="brugernavn">Brugernavn</string>
    <string name="name">Name</string>
    <string name="log_in">Log In</string>
    <string name="kodeord">Kodeord</string>
    <string name="support">Support</string>
    <string name="velkommen">Velkommen</string>
    <string name="refusal_proposition">Denied Proposition</string>
    <string name="send_accept">Send Accept</string>
    <string name="please_write_your_concern_here">Please write your concern here</string>
    <string name="the_proposition_will_be_displayed_here">The proposition will be displayed here</string>
    <string name="refuse_proposition">Refuse Proposition</string>
</resources>